# semantic_mapping

./: .gitignore  README.md  pcl_script.sh  stack.xml
align_principle_axis/: CMakeLists.txt  axis_alignment_plugins.xml  mainpage.dox  manifest.xml
align_principle_axis/include/align_principle_axis/: axis_alignment.h  floor_axis_alignment.h
align_principle_axis/src/: axis_alignment.cpp  floor_axis_alignment.cpp
align_principle_axis_floor_plugin/: CMakeLists.txt  align_principle_axis_floor_plugin.xml  mainpage.dox  manifest.xml
align_principle_axis_floor_plugin/cfg/: FloorAxisAlignmentConfig.cfg
align_principle_axis_floor_plugin/include/align_principle_axis_floor_plugin/: floor_axis_alignment.h
align_principle_axis_floor_plugin/src/: floor_axis_alignment.cpp
align_principle_axis_interface/: mainpage.dox  manifest.xml
align_principle_axis_interface/include/align_principle_axis_interface/: axis_alignment.h
box_filter/: CMakeLists.txt  mainpage.dox  manifest.xml
box_filter/include/box_filter/: box_filter.h
box_filter/src/: box_filter.cpp
box_filter/srv/: boxFilter.srv
docs/: pluginlib_diagram.odg  semantic_architecture.txt  semantic_links.txt  semantic_mapping_todo.txt  semantic_pipeline.txt
kinect_capture_frame/: CMakeLists.txt  mainpage.dox  manifest.xml
kinect_capture_frame/src/: kinect_capture_frame.cpp  kinect_capture_frame_service.cpp
kinect_capture_frame/srv/: kinectSnapshot.srv
mesh_io/: CMakeLists.txt  mainpage.dox  manifest.xml
mesh_io/include/mesh_io/: mesh_converter.h  mesh_io.h
mesh_io/src/: main.cpp  mesh_converter.cpp  mesh_io.cpp
mesh_io/srv/: loadImagesFromDir.srv  loadModelFromFile.srv  loadPointcloudsFromDir.srv  loadTransformationsFromDir.srv
pcl_tools/: CMakeLists.txt  mainpage.dox  manifest.xml
pcl_tools/include/pcl_tools/: pcl_tools.h
pcl_tools/src/: box_filter.cpp  calculate_normals.cpp  kinect_capture_frame_service.cpp  pcl_tools.cpp  transform_cloud.cpp  vox_filter.cpp
pcl_typedefs/: CMakeLists.txt  manifest.xml
pcl_typedefs/include/pcl_typedefs/: pcl_typedefs.h
plugin_test/: CMakeLists.txt  manifest.xml
plugin_test/src/: .class_list.cpp.swp  main.cpp
pluginlib_example/plugin_test/: CMakeLists.txt  mainpage.dox
pluginlib_example/plugin_test/src/: main.cpp
pluginlib_example/segment_fixtures/: mainpage.dox  segment_fixtures_plugin.xml
pluginlib_example/segment_planes/: mainpage.dox  manifest.xml
pluginlib_example/segment_planes/src/: segment_planes.cpp
pluginlib_example/segmentation_interface/: CMakeLists.txt  manifest.xml
pluginlib_example/segmentation_interface/src/: segmentation.cpp
qtgui/: CMakeLists.txt  mainpage.dox  manifest.xml
qtgui/src/: main.cpp
register_kinect_to_model/: CMakeLists.txt  mainpage.dox  manifest.xml
register_kinect_to_model/include/register_kinect_to_model/: icp_wrapper.h  kinect_registration.h  pcl_typedefs.h
register_kinect_to_model/src/: icp_wrapper.cpp  kinect_registration.cpp  main.cpp  misc.cpp
register_kinect_to_model/srv/: registerKinectToModel.srv
rviz_panel/: CMakeLists.txt  mainpage.dox  manifest.xml  plugin_description.xml
rviz_panel/include/rviz_panel/: controller_panel.h
rviz_panel/src/: controller_panel.cpp
rviz_visualizer/: CMakeLists.txt  mainpage.dox  manifest.xml
rviz_visualizer/include/rviz_visualizer/: rviz_visualization.h
rviz_visualizer/src/: rviz_visualization.cpp
segment_fixtures/: CMakeLists.txt  manifest.xml
segment_fixtures/src/: segment_fixtures.cpp
segment_fixtures_from_planes_plugin/: CMakeLists.txt  mainpage.dox  manifest.xml  segment_fixtures_from_planes_plugin.xml
segment_fixtures_from_planes_plugin/cfg/: FixtureSegmentationFromPlanes.cfg
segment_fixtures_from_planes_plugin/include/segment_fixtures_from_planes_plugin/: fixture_segmentation_from_planes.h
segment_fixtures_from_planes_plugin/src/: fixture_segmentation_from_planes.cpp
segment_fixtures_interface/: mainpage.dox  manifest.xml
segment_fixtures_interface/include/segment_fixtures_interface/: fixture_segmentation.h
segment_planes/: CMakeLists.txt  manifest.xml  segment_planes_plugin.xml
segment_planes/include/segment_planes/: segment_planes.h
segment_planes/src/: segment_planes.cpp
segment_planes_interface/: mainpage.dox  manifest.xml
segment_planes_interface/include/segment_planes_interface/: plane_segmentation.h
segment_planes_ransac_plugin/: CMakeLists.txt  mainpage.dox  manifest.xml  segment_planes_ransac_plugin.xml
segment_planes_ransac_plugin/include/segment_planes_ransac_plugin/: plane_segmentation_ransac.h
segment_planes_ransac_plugin/src/: plane_segmentation_ransac.cpp
segment_planes_region_grow_plugin/: CMakeCache.txt  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  segment_planes_region_grow_plugin.xml
segment_planes_region_grow_plugin/cfg/: PlaneSegmentationRegionGrow.cfg
segment_planes_region_grow_plugin/include/segment_planes_region_grow_plugin/: plane_segmentation_region_grow.h
segment_planes_region_grow_plugin/src/: plane_segmentation_region_grow.cpp
segmentation_interface/: CMakeLists.txt  mainpage.dox  manifest.xml
segmentation_interface/include/segmentation_interface/: segment_fixtures.h
segmentation_interface/src/: main.cpp  segment_fixtures.cpp  segment_planes.cpp  segmentation.cpp
semantic_mapping_app/: CMakeLists.txt  mainpage.dox  manifest.xml
semantic_mapping_app/cfg/: ControllerConfig.cfg
semantic_mapping_app/include/semantic_mapping_app/: controller.h  parameter_server.h  visualization.h  visualize_wrapper.h
semantic_mapping_app/launch/: semantic_mapping+kinect.launch  semantic_mapping.launch
semantic_mapping_app/src/: controller.cpp  main.cpp  message_conversions.cpp  parameter_server.cpp  visualization.cpp  visualize_wrapper.cpp
visualizer/: CMakeLists.txt  mainpage.dox  manifest.xml
visualizer/include/visualizer/: visualization.h
visualizer/src/: visualization.cpp
visualizer_base/: CMakeLists.txt  mainpage.dox  manifest.xml
visualizer_base/include/visualizer_base/: visualization_base.h
visualizer_base/src/: visualization_base.cpp
(+5 files in other folders)
